[gd_scene load_steps=3 format=3 uid="uid://cdkbsm6iqovkg"]

[ext_resource type="Script" uid="uid://ca63srm8h1s7o" path="res://scenes/ui/save_manager/save_game_card/save_game_card.gd" id="1_a0vp4"]
[ext_resource type="PackedScene" uid="uid://dgftvluymchyc" path="res://scenes/ui/save_manager/menu_button/menu_button.tscn" id="2_2cjle"]

[node name="SaveGameCard" type="MarginContainer"]
custom_minimum_size = Vector2(260, 64)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_a0vp4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"SaveCardMarginContainer"

[node name="EmptyLabel" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "EMPTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SaveCardVBoxContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/ContentContainer"]
layout_mode = 2

[node name="SaveNameLabel" type="Label" parent="PanelContainer/MarginContainer/ContentContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SaveCardNameLabel"
text = "0123456789ABCDEF"

[node name="MenuButton" parent="PanelContainer/MarginContainer/ContentContainer/HBoxContainer" instance=ExtResource("2_2cjle")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveDateLabel" type="Label" parent="PanelContainer/MarginContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SaveCardDateLabel"
text = "YYYY-MM-DD HH:mm:ss"
horizontal_alignment = 2
vertical_alignment = 2
